fix width of left and right arrows on mobile

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -115,7 +115,7 @@
     display: block;
     position: fixed;
     top: 50%;
-    left: 10px;
+    left: 1px;
     transform: translate(0, -50%);
 }
 
@@ -123,12 +123,16 @@
     display: block;
     position: fixed;
     top:50%;
-    right: 10px;
+    right: 1px;
     transform: translate(0, -50%);
 }
 
 .left-button .svg .svg-path, .right-button .svg .svg-path{
     fill: rgb(240, 242, 144);
+}
+
+.left-button .svg, .right-button .svg{
+    width: 50px;
 }
 
 body{
